# bulwark

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  SECURITY.md  deny.toml
.github/: CODE_OF_CONDUCT.md
.github/workflows/: ci.yml  leak-guard.yml  release.yml
docs/: README.md  SKILL.md  adopt-vs-build.md  ci-allowlist.md  containment-boundaries.md  hardened-mode.md  macos-behavior-matrix.md  macos-permissions.md  macos-sudo.md  macos.md  modes-and-wrapping.md  offband-consent.md  policy-receipts.md  remote.md  vm-evidence.md
macos-es-proof/: .gitignore  GateInfo.plist  Info.plist  build-bundle.sh  build-cli-pkg.sh  build-gate-bundle.sh  build.sh  es_gate.swift  es_proof.entitlements  es_proof.swift  es_proof_test.swift  notarize.sh  prove.sh  prove_test.sh  verify-allowlist-gate.sh  verify-gate.sh
scripts/: leak-guard.sh
src/: allowlist.rs  audit.rs  cgroup.rs  consent.rs  deploy.rs  gate.rs  gate_macos.rs  gate_stub.rs  glob.rs  grantwatch.rs  hardened.rs  hardened_stub.rs  hivebus_keys.rs  integrity.rs  main.rs  policy.rs  proctree.rs  protect.rs  receipt.rs  remote.rs  socket.rs  socket_stub.rs
tests/: allowlist_ci.rs  consent_socket.rs  gate_integration.rs  hardened_landlock.rs  hardening.rs  integrity_taint.rs  macos_es_proof_client_test.rs  macos_gate_core_test.rs  policy_cli.rs  remote_consent.rs  remote_deploy.rs  remote_hardened.rs
