[package]
name = "bulwark"
version = "0.7.2"
edition = "2021"
description = "Kernel-boundary file-read gate for AI agent process trees (Linux fanotify MVP)"
license = "AGPL-3.0-or-later"
repository = "https://github.com/obstalabs/bulwark"
readme = "README.md"
rust-version = "1.74"

[[bin]]
name = "bulwark"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
libc = "0.2"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
# dispatch-time hivebus key handoff. ed25519 worker identity + fingerprint.
# Minimal surface for a security binary: dalek without the heavy `rand` feature
# (seed comes from getrandom = the OS CSPRNG directly), sha2 for the fingerprint,
# base64 to match hivebus `answer --signing-key` (StdEncoding). Hex is hand-rolled.
ed25519-dalek = "2"
getrandom = "0.2"
sha2 = "0.10"
base64 = "0.22"

[dev-dependencies]
# Integration tests send signals to the supervisor to exercise fail-closed.
libc = "0.2"

[profile.release]
opt-level = 2
